--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "PS270 Final Project"
-author: "Your Name Here"
+author: Julia Wright
 description: "My final project"
 output:
   distill::distill_article:
@@ -12,3 +12,6 @@ output:
 ## Project thoughts
 
 I am interested in exploring data related to...
+
+- polling data
+- candidate spending on ads
