--- a/index.Rmd
+++ b/index.Rmd
@@ -13,5 +13,4 @@ output:
 
 I am interested in exploring data related to...
 
-- polling data
-- candidate spending on ads
+I am interested looking at election outcomes/polling data. I would also be interested in looking into campaign finance similar to problem set 2. I thought it was interesting looking at which candidates spent the most on advestising
