--- a/index.Rmd
+++ b/index.Rmd
@@ -99,5 +99,5 @@ We can also examine these results by looking at the bar plot above. The bar on t
 
 ## Conclusion
 
-According to these results, my hypothesis that a greater amount of absentee votes (mail in votes) are received by the Democratic Party, which I based off of behavioral patterns that I observed during the 2020 election and the COVID-19 pandemic is a weak hypothesis. Though the democratic voters observed in this study did send in more mail-in ballots versus voting in person at the polls in comparison to republican votes, and there was statistical significance, proving that these results were not due to chance, the coefficient of 0.010 shows that it was very slim and does not demonstrate great significance in terms of correlation. This analysis was limited due to a number of different confounding variables. For example, demographics such as age, gender, income, and education play a role in voting patterns. Additionally, location plays a great role as well, which may also tie to political ideologies and beliefs. Since my data and what I chose to observe in this study was limited and did not take into account these confounding variables, we may deny a causal relationship. To improve my analysis, I would take into account demographics as well and would utilize a more comprehensive set of data for a greater examination of voting patterns in the 2020 election. 
+According to these results, my hypothesis that a greater amount of absentee votes (mail-in votes) are received by the Democratic Party, which I based off of behavioral patterns that I observed during the 2020 election and the COVID-19 pandemic is a weak hypothesis. Though the democratic voters observed in this study did send in more mail-in ballots versus voting in person at the polls in comparison to republican votes, and there was statistical significance, proving that these results were not due to chance, the coefficient of 0.010 shows that it was very slim and does not demonstrate great significance in terms of correlation. This analysis was limited due to a number of different confounding variables. For example, demographics such as age, gender, income, and education play a role in voting patterns. Additionally, location plays a great role as well, which may also tie to political ideologies and beliefs. Since my data and what I chose to observe in this study was limited and did not take into account these confounding variables, we may deny a causal relationship. To improve my analysis, I would take into account demographics as well and would utilize a more comprehensive set of data for a greater examination of voting patterns in the 2020 election. 
 
