--- a/index.Rmd
+++ b/index.Rmd
@@ -36,7 +36,7 @@ file.info("PRESIDENT_precinct_reduced.csv")$size
 
 ```
 
-```{r fig.width= 20, fig.height = 4}
+```{r}
 library(tidyverse)
 
 
@@ -88,7 +88,10 @@ barplot_data <- data |>
   )
 
 ggplot(barplot_data, aes(x = absentee_votes, y = proportion_dem, fill = absentee_votes)) +
-  geom_bar(stat = "identity", show.legend = FALSE)
+  geom_bar(stat = "identity", show.legend = FALSE) +
+  labs(title = "Proportion of democratic votes by mode of voting",
+       x = "Absentee Votes ( 0 is Non absentee and 1 is absentee)", 
+       y = "Democratic Votes")
 ```
 
 The intercept of 0.504 means that when absentee votes is 0, about 50.4% of votes that are in person and at the polls will be for the Democratic candidate. Since the coefficient for absentee votes is 0.010, this means that the chances of an absentee vote being a democratic vote increases by about one percent. The p-value is zero. This means that there does not seem to be a random effect and makes the study statistically significant. 
